--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory/hosts.yaml
+inventory = ./inventory/hosts.yml
 remote_user = ubuntu
 host_key_checking = False
 retry_files_enabled = False
