--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 inventory = ./inventory/hosts.yml
+roles_path = ./ansible/roles
 remote_user = ubuntu
 host_key_checking = False
 retry_files_enabled = False
