--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./inventory/hosts.yml
-roles_path = ./ansible/roles
+roles_path = ./roles
 remote_user = ubuntu
 host_key_checking = False
 retry_files_enabled = False
-private_key_file = ~/.ssh/id_rsa
+private_key_file = ~/.ssh/id_ed25519
