--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,20 +1,28 @@
 all:
+  vars:
+    ansible_user: ubuntu
+    ansible_ssh_private_key_file: ~/.ssh/id_ed25519
+    ansible_ssh_common_args: >-
+      -o ProxyCommand="ssh -i ~/.ssh/id_ed25519 -W %h:%p ubuntu@158.160.113.23"
+
   children:
     webservers:
       hosts:
         web-1:
-          ansible_host: 192.168.10.11
+          ansible_host: 10.10.2.25
         web-2:
-          ansible_host: 192.168.10.12
+          ansible_host: 10.10.2.19
+
     monitoring:
       hosts:
         prometheus:
-          ansible_host: 192.168.10.13
+          ansible_host: 10.10.2.18
         grafana:
-          ansible_host: 192.168.10.14
+          ansible_host: 10.10.1.33
+
     logging:
       hosts:
         elasticsearch:
-          ansible_host: 192.168.10.15
+          ansible_host: 10.10.2.33
         kibana:
-          ansible_host: 192.168.10.16
+          ansible_host: 10.10.1.19
