--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./inventory/hosts.yml
+inventory = /root/fops-sysadm-diplom-updated/ansible/inventory/hosts.yml
 roles_path = /root/fops-sysadm-diplom-updated/ansible/roles
 remote_user = ubuntu
 host_key_checking = False
