--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -1,3 +1,5 @@
+- import_tasks: ../../common/tasks/install_docker.yml
+
 - name: Create data directory for Elasticsearch
   file:
     path: /opt/elasticsearch/data
