--- a/ansible/roles/kibana/tasks/main.yml
+++ b/ansible/roles/kibana/tasks/main.yml
@@ -1,3 +1,5 @@
+- import_tasks: ../../common/tasks/install_docker.yml
+
 - name: Run Kibana container
   community.docker.docker_container:
     name: kibana
