Changed images for Kibana and Elastic

--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: Run Elasticsearch container
   community.docker.docker_container:
     name: elasticsearch
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.14
+    image: elasticsearch:7.17.12
     ports:
       - "9200:9200"
     env:
