--- a/ansible/roles/kibana/tasks/main.yml
+++ b/ansible/roles/kibana/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Run Kibana container
   community.docker.docker_container:
     name: kibana
-    image: docker.elastic.co/kibana/kibana:7.17.14
+    image: kibana:7.17.12
     ports:
       - "5601:5601"
     env:
