--- a/ansible/roles/filebeat/tasks/main.yml
+++ b/ansible/roles/filebeat/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Run Filebeat container
   community.docker.docker_container:
     name: filebeat
-    image: docker.elastic.co/beats/filebeat:7.17.14
+    image: elastic/filebeat:7.17.12
     user: root
     command: ["--strict.perms=false"]
     volumes:
