--- a/ansible/roles/nginx/tasks/exporters.yml
+++ b/ansible/roles/nginx/tasks/exporters.yml
@@ -1,3 +1,5 @@
+- import_tasks: ../../common/tasks/install_docker.yml
+
 - name: Install Node Exporter
   community.docker.docker_container:
     name: node_exporter
