--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -5,6 +5,9 @@
     path: /opt/elasticsearch/data
     state: directory
     recurse: yes
+    owner: 1000
+    group: 1000
+    mode: '0755'
 
 - name: Run Elasticsearch container
   community.docker.docker_container:
@@ -18,3 +21,4 @@
     volumes:
       - /opt/elasticsearch/data:/usr/share/elasticsearch/data
     restart_policy: always
+    user: "1000:1000"
